update cliv2 ml v2.10.0

--- a/Notebooks/exercise02_train_on_remote.ipynb
+++ b/Notebooks/exercise02_train_on_remote.ipynb
@@ -376,7 +376,7 @@
       "cell_type": "markdown",
       "source": [
         "では、AML CLI v2 でジョブを投入してみましょう。<br>\n",
-        "[AML Studio](https://ml.azure.com/) の「ジョブ(Job)」メニューから進捗と結果を確認します。"
+        "AML Studio の「ジョブ(Job)」メニューから進捗と結果を確認します。"
       ],
       "metadata": {}
     },
@@ -393,7 +393,7 @@
       "cell_type": "markdown",
       "source": [
         "ジョブが完了するまでお待ちください。\n",
-        "[AML studio UI](https://ml.azure.com/)(\"Jobs \"ペイン参照)または以下の CLI コマンドで進捗と結果を表示することができます。<br>\n",
+        "AML studio UI(\"Jobs \"ペイン参照)または以下の CLI コマンドで進捗と結果を表示することができます。<br>\n",
         "nifty_tree_cftvbh77f7 を**生成したジョブ名で置き換えてください**。ジョブ名については、上記の出力を参照してください\n"
       ],
       "metadata": {}
